--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,14 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "module": "commonjs", // Necesită commonjs pentru Jest
+    "target": "es6",
+    "esModuleInterop": true,
+    "strict": true,
+    "baseUrl": "./src",
+    "types": ["jest", "node"]
+  }
 }
